@@ -207,7 +207,7 @@ die sich nicht daran halten!</p>
 Tschechische Übersetzng &copy; 2011 Josef Nemec<br>
 Dänische Übersetzung &copy; 2011 Jens Maegaard<br>
 Französische Übersetzung &copy; 2011 Patrick Varlet<br>
-Russische Übersetzung &copy; 2012 Viktor Klim<br>
+Russische Übersetzung &copy; 2012 Lybomyr Kydray<br>
 Polnische Übersetzung &copy; 2012 Kamil Krzes</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
 
