@@ -157,7 +157,7 @@ Preto musia byť všetky takéto kódy aktualizované!</p>
 České preklady &copy; 2011 Josef Nemec<br>
 Dánsky preklad &copy; 2011 Jens Maegaard<br>
 Francúzsky preklad &copy; 2011 Patrick Varlet<br>
-Preklad do ruštiny &copy; 2012 Viktor Klim<br>
+Preklad do ruštiny &copy; 2012 Lybomyr Kydray<br>
 Poľský preklad &copy; 2012 Kamil Krzes</p>
 <div class="toplink"><a href="#">HORE</a></div>
 
